changed padding to fix white space

--- a/src/views/Schedule.css
+++ b/src/views/Schedule.css
@@ -26,7 +26,7 @@ td {
     padding: 10px;
 }
 table {
-    border-spacing: 20px;
+    border-spacing: 10px;
     margin-left: auto;
     margin-right: auto;
     padding: 0px;
